--- a/docker/01_ngnix/01_centos6_ngnix/Dockerfile
+++ b/docker/01_ngnix/01_centos6_ngnix/Dockerfile
@@ -16,17 +16,17 @@ RUN	mv /etc/yum.repos.d/CentOS-Base.repo /etc/yum.repos.d/CentOS-Base.repo.backu
 	
 ADD ./src/Centos-6.repo /etc/yum.repos.d/CentOS-Base.repo
 ADD ./src/epel-6.repo /etc/yum.repos.d/epel.repo
+ADD ./src/nginx-$NGINX_VERSION.tar.gz /usr/local/src \
+ADD ./src/pcre-$PCRE_VERSION.zip /usr/local/src \
 
 RUN yum clean all &&  yum makecache
-	
 RUN yum install -y wget gcc gcc-c++ make openssl-devel
 
 RUN useradd -s /sbin/nologin -M www
 
 RUN mkdir -p $BUILD_ROOT \ 
 
-ADD ./src/nginx-$NGINX_VERSION.tar.gz /usr/local/src \
-	&& ./src/pcre-$PCRE_VERSION.zip /usr/local/src \
+
 	
 #WORKDIR
 WORKDIR $BUILD_ROOT/nginx-$NGINX_VERSION
