--- a/docker/bookstack/Dockerfile
+++ b/docker/bookstack/Dockerfile
@@ -11,8 +11,9 @@ ENV BUILD_ROOT /usr/local/src/
 RUN cp /etc/apt/sources.list /etc/apt/sources.list.bak \
     && sed -i "s/archive\.ubuntu\.com/mirrors\.163\.com/g" /etc/apt/sources.list \
     && apt-get update 
-RUN apt-get -y install zip unzip curl make gcc g++
+RUN apt-get -y install weget 
 RUN mkdir -p $BUILD_ROOT \
     && cd $BUILD_ROOT \
 	&& wget -O install.sh http://download.bt.cn/install/install-ubuntu.sh && sudo bash install.sh
-		
+# 镜像暴露8888端口；
+EXPOSE 8888
