--- a/c++/duilib/duilib_TL_fjs/ClientModule/DuiDesigner/DuiDesigner.vcxproj
+++ b/c++/duilib/duilib_TL_fjs/ClientModule/DuiDesigner/DuiDesigner.vcxproj
@@ -43,7 +43,7 @@
     <_ProjectFileVersion>12.0.30501.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UnicodeDebug|Win32'">
-    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
+    <OutDir>..\..\\Bin\\$(Configuration)</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
@@ -76,7 +76,7 @@
       <AdditionalIncludeDirectories>$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <OutputFile>..\\..\\Bin\\$(Configuration)\\$(ProjectName)_d.exe</OutputFile>
+      <OutputFile>..\..\\Bin\\$(Configuration)\\$(ProjectName).exe</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>.\$(Configuration)\$(TargetName).pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
