--- a/c++/win32/02_Process/进程/1_进程/1_进程.vcxproj
+++ b/c++/win32/02_Process/进程/1_进程/1_进程.vcxproj
@@ -65,6 +65,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyPress.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyPress.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
